--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
     <title>anDine</title>
   </head>
   <body>
+    
     <!-- desktop view -->
     <div class="container" id="container">
       <div id="menu">
         <div class="title">
-          <img src="" alt="" />
+          <img src="assets/logo.png" alt="logo" />
         </div>
         <div class="menu-item">
           <a href="#">About</a>
