--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap">
     <title>anDine</title>
   </head>
   <body>
     
     <!-- desktop view -->
-    <div class="container" id="container">
+    <div class="container">
       <div id="menu">
-        <div class="title">
+        <div class="logo">
           <img src="assets/logo.png" alt="logo" />
         </div>
         <div class="menu-item">
