--- a/index.html
+++ b/index.html
@@ -43,9 +43,18 @@
             <i class="fa fa-cart-plus" id="cart-plus"> 0 Items</i>
           </div>
         </div>
-        <div id="food-items" class="d-food-items">
-          <div id="biryani" class="d-biryani">
+        <div id="food-items">
+          <div id="biryani">
             <p id="category-name">Biryani</p>
+            <div id="item-card">
+              <div id="card-top">
+                <i class="fa fa-start" id="rating">$.3</i>
+                <i class="fa fa-heart-o add-to-cart"></i>
+              </div>
+              <img src="assets/Briyani/AmburChickenBiryani.jpg" alt="Ambur Chicken">
+              <p id="item-name">Ambur Chicken</p>
+              <p id="item-price">Price : Rp. 27.000</p>
+            </div>
           </div>
 
           <div id="chicken" class="d-chicken">
