--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap">
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap"
+    />
     <title>anDine</title>
   </head>
   <body>
-    
     <!-- desktop view -->
     <div class="container">
       <div id="menu">
@@ -48,33 +50,96 @@
             <p id="category-name">Biryani</p>
             <div id="item-card">
               <div id="card-top">
-                <i class="fa fa-start" id="rating">$.3</i>
+                <i class="fa fa-star" id="rating">$.3</i>
                 <i class="fa fa-heart-o add-to-cart"></i>
               </div>
-              <img src="assets/Briyani/AmburChickenBiryani.jpg" alt="Ambur Chicken">
+              <img
+                src="assets/Briyani/AmburChickenBiryani.jpg"
+                alt="Ambur Chicken"
+              />
               <p id="item-name">Ambur Chicken</p>
               <p id="item-price">Price : Rp. 27.000</p>
             </div>
           </div>
 
-          <div id="chicken" class="d-chicken">
+          <div id="chicken">
             <p id="category-name">Chicken Delicious</p>
+            <div id="item-card">
+              <div id="card-top">
+                <i class="fa fa-star" id="rating">$.3</i>
+                <i class="fa fa-heart-o add-to-cart"></i>
+              </div>
+              <img
+                src="assets/Briyani/AmburChickenBiryani.jpg"
+                alt="Ambur Chicken"
+              />
+              <p id="item-name">Ambur Chicken</p>
+              <p id="item-price">Price : Rp. 27.000</p>
+            </div>
           </div>
 
-          <div id="paneer" class="d-paneer">
+          <div id="paneer">
             <p id="category-name">Paneer Mania</p>
+            <div id="item-card">
+              <div id="card-top">
+                <i class="fa fa-star" id="rating">$.3</i>
+                <i class="fa fa-heart-o add-to-cart"></i>
+              </div>
+              <img
+                src="assets/Briyani/AmburChickenBiryani.jpg"
+                alt="Ambur Chicken"
+              />
+              <p id="item-name">Ambur Chicken</p>
+              <p id="item-price">Price : Rp. 27.000</p>
+            </div>
           </div>
 
-          <div id="vegetable" class="d-vegetable">
+          <div id="vegetable">
             <p id="category-name">Pure Veg Dishes</p>
+            <div id="item-card">
+              <div id="card-top">
+                <i class="fa fa-star" id="rating">$.3</i>
+                <i class="fa fa-heart-o add-to-cart"></i>
+              </div>
+              <img
+                src="assets/Briyani/AmburChickenBiryani.jpg"
+                alt="Ambur Chicken"
+              />
+              <p id="item-name">Ambur Chicken</p>
+              <p id="item-price">Price : Rp. 27.000</p>
+            </div>
           </div>
 
-          <div id="chinese" class="d-chinese">
+          <div id="chinese">
             <p id="category-name">Chinese Corner</p>
+            <div id="item-card">
+              <div id="card-top">
+                <i class="fa fa-star" id="rating">$.3</i>
+                <i class="fa fa-heart-o add-to-cart"></i>
+              </div>
+              <img
+                src="assets/Briyani/AmburChickenBiryani.jpg"
+                alt="Ambur Chicken"
+              />
+              <p id="item-name">Ambur Chicken</p>
+              <p id="item-price">Price : Rp. 27.000</p>
+            </div>
           </div>
 
-          <div id="south-indian" class="d-south-indian">
+          <div id="south-indian">
             <p id="category-name">South Indian</p>
+            <div id="item-card">
+              <div id="card-top">
+                <i class="fa fa-star" id="rating">$.3</i>
+                <i class="fa fa-heart-o add-to-cart"></i>
+              </div>
+              <img
+                src="assets/Briyani/AmburChickenBiryani.jpg"
+                alt="Ambur Chicken"
+              />
+              <p id="item-name">Ambur Chicken</p>
+              <p id="item-price">Price : Rp. 27.000</p>
+            </div>
           </div>
         </div>
 
