--- a/index.html
+++ b/index.html
@@ -70,26 +70,26 @@
                 <i class="fa fa-heart-o add-to-cart"></i>
               </div>
               <img
-                src="assets/Briyani/AmburChickenBiryani.jpg"
-                alt="Ambur Chicken"
+                src="assets/Chicken/Chicken-Curry.jpg"
+                alt="Chicken Curry"
               />
-              <p id="item-name">Ambur Chicken</p>
+              <p id="item-name">Chicken Curry</p>
               <p id="item-price">Price : Rp. 27.000</p>
             </div>
           </div>
 
-          <div id="paneer">
-            <p id="category-name">Paneer Mania</p>
+          <div id="ChinaFood">
+            <p id="category-name">China Food</p>
             <div id="item-card">
               <div id="card-top">
                 <i class="fa fa-star" id="rating">$.3</i>
                 <i class="fa fa-heart-o add-to-cart"></i>
               </div>
               <img
-                src="assets/Briyani/AmburChickenBiryani.jpg"
-                alt="Ambur Chicken"
+                src="assets/ChinaFood/chowmin.jpg"
+                alt="Chowmin"
               />
-              <p id="item-name">Ambur Chicken</p>
+              <p id="item-name">Chowmin</p>
               <p id="item-price">Price : Rp. 27.000</p>
             </div>
           </div>
@@ -102,42 +102,42 @@
                 <i class="fa fa-heart-o add-to-cart"></i>
               </div>
               <img
-                src="assets/Briyani/AmburChickenBiryani.jpg"
-                alt="Ambur Chicken"
+                src="assets/Vegetable/vegetable-pakora.jpg"
+                alt="VegetablePakora"
               />
-              <p id="item-name">Ambur Chicken</p>
+              <p id="item-name">Vegetable Pakora</p>
               <p id="item-price">Price : Rp. 27.000</p>
             </div>
           </div>
 
-          <div id="chinese">
-            <p id="category-name">Chinese Corner</p>
+          <div id="JapanesseFood">
+            <p id="category-name">Japanesse Food</p>
             <div id="item-card">
               <div id="card-top">
                 <i class="fa fa-star" id="rating">$.3</i>
                 <i class="fa fa-heart-o add-to-cart"></i>
               </div>
               <img
-                src="assets/Briyani/AmburChickenBiryani.jpg"
-                alt="Ambur Chicken"
+                src="assets/JapanesseFood/BeefYakiniku.jpg"
+                alt="BeefYakiniku"
               />
-              <p id="item-name">Ambur Chicken</p>
+              <p id="item-name">Beef Yakiniku</p>
               <p id="item-price">Price : Rp. 27.000</p>
             </div>
           </div>
 
-          <div id="south-indian">
-            <p id="category-name">South Indian</p>
+          <div id="KoreanFood">
+            <p id="category-name">Korean Food</p>
             <div id="item-card">
               <div id="card-top">
                 <i class="fa fa-star" id="rating">$.3</i>
                 <i class="fa fa-heart-o add-to-cart"></i>
               </div>
               <img
-                src="assets/Briyani/AmburChickenBiryani.jpg"
-                alt="Ambur Chicken"
+                src="assets/KoreanFood/bibimbap.jpg"
+                alt="Bibimbap"
               />
-              <p id="item-name">Ambur Chicken</p>
+              <p id="item-name">Bibimbap</p>
               <p id="item-price">Price : Rp. 27.000</p>
             </div>
           </div>
