--- a/index.html
+++ b/index.html
@@ -48,54 +48,298 @@
         <div id="food-items">
           <div id="biryani">
             <p id="category-name">Biryani</p>
-            <div id="item-card">
-              <div id="card-top">
-                <i class="fa fa-star" id="rating">$.3</i>
-                <i class="fa fa-heart-o add-to-cart"></i>
-              </div>
-              <img
-                src="assets/Briyani/AmburChickenBiryani.jpg"
-                alt="Ambur Chicken"
-              />
-              <p id="item-name">Ambur Chicken</p>
-              <p id="item-price">Price : Rp. 27.000</p>
-            </div>
           </div>
+
+          <div id="item-card">
+            <div id="card-top">
+              <i class="fa fa-star" id="rating">$.3</i>
+              <i class="fa fa-heart-o add-to-cart"></i>
+            </div>
+            <img
+              src="assets/Briyani/AmburChickenBiryani.jpg"
+              alt="Ambur Chicken"
+            />
+            <p id="item-name">Ambur Chicken</p>
+            <p id="item-price">Price : Rp. 27.000</p>
+          </div>
+
+          <div id="item-card">
+            <div id="card-top">
+              <i class="fa fa-star" id="rating">$.3</i>
+              <i class="fa fa-heart-o add-to-cart"></i>
+            </div>
+            <img
+              src="assets/Briyani/AmburChickenBiryani.jpg"
+              alt="Ambur Chicken"
+            />
+            <p id="item-name">Ambur Chicken</p>
+            <p id="item-price">Price : Rp. 27.000</p>
+          </div>
+          
+          <div id="item-card">
+            <div id="card-top">
+              <i class="fa fa-star" id="rating">$.3</i>
+              <i class="fa fa-heart-o add-to-cart"></i>
+            </div>
+            <img
+              src="assets/Briyani/AmburChickenBiryani.jpg"
+              alt="Ambur Chicken"
+            />
+            <p id="item-name">Ambur Chicken</p>
+            <p id="item-price">Price : Rp. 27.000</p>
+          </div>
+
+          <div id="item-card">
+            <div id="card-top">
+              <i class="fa fa-star" id="rating">$.3</i>
+              <i class="fa fa-heart-o add-to-cart"></i>
+            </div>
+            <img
+              src="assets/Briyani/AmburChickenBiryani.jpg"
+              alt="Ambur Chicken"
+            />
+            <p id="item-name">Ambur Chicken</p>
+            <p id="item-price">Price : Rp. 27.000</p>
+          </div>
+
+          <div id="item-card">
+            <div id="card-top">
+              <i class="fa fa-star" id="rating">$.3</i>
+              <i class="fa fa-heart-o add-to-cart"></i>
+            </div>
+            <img
+              src="assets/Briyani/AmburChickenBiryani.jpg"
+              alt="Ambur Chicken"
+            />
+            <p id="item-name">Ambur Chicken</p>
+            <p id="item-price">Price : Rp. 27.000</p>
+          </div>
+
+          <div id="item-card">
+            <div id="card-top">
+              <i class="fa fa-star" id="rating">$.3</i>
+              <i class="fa fa-heart-o add-to-cart"></i>
+            </div>
+            <img
+              src="assets/Briyani/AmburChickenBiryani.jpg"
+              alt="Ambur Chicken"
+            />
+            <p id="item-name">Ambur Chicken</p>
+            <p id="item-price">Price : Rp. 27.000</p>
+          </div>
+
 
           <div id="chicken">
             <p id="category-name">Chicken Delicious</p>
-            <div id="item-card">
-              <div id="card-top">
-                <i class="fa fa-star" id="rating">$.3</i>
-                <i class="fa fa-heart-o add-to-cart"></i>
-              </div>
-              <img
-                src="assets/Chicken/Chicken-Curry.jpg"
-                alt="Chicken Curry"
-              />
-              <p id="item-name">Chicken Curry</p>
-              <p id="item-price">Price : Rp. 27.000</p>
-            </div>
           </div>
+
+          <div id="item-card">
+            <div id="card-top">
+              <i class="fa fa-star" id="rating">$.3</i>
+              <i class="fa fa-heart-o add-to-cart"></i>
+            </div>
+            <img
+              src="assets/Chicken/Chicken-Curry.jpg"
+              alt="Chicken Curry"
+            />
+            <p id="item-name">Chicken Curry</p>
+            <p id="item-price">Price : Rp. 27.000</p>
+          </div>
+
+
+          <div id="item-card">
+            <div id="card-top">
+              <i class="fa fa-star" id="rating">$.3</i>
+              <i class="fa fa-heart-o add-to-cart"></i>
+            </div>
+            <img
+              src="assets/Chicken/Chicken-Curry.jpg"
+              alt="Chicken Curry"
+            />
+            <p id="item-name">Chicken Curry</p>
+            <p id="item-price">Price : Rp. 27.000</p>
+          </div>
+
+          <div id="item-card">
+            <div id="card-top">
+              <i class="fa fa-star" id="rating">$.3</i>
+              <i class="fa fa-heart-o add-to-cart"></i>
+            </div>
+            <img
+              src="assets/Chicken/Chicken-Curry.jpg"
+              alt="Chicken Curry"
+            />
+            <p id="item-name">Chicken Curry</p>
+            <p id="item-price">Price : Rp. 27.000</p>
+          </div>
+
+          <div id="item-card">
+            <div id="card-top">
+              <i class="fa fa-star" id="rating">$.3</i>
+              <i class="fa fa-heart-o add-to-cart"></i>
+            </div>
+            <img
+              src="assets/Chicken/Chicken-Curry.jpg"
+              alt="Chicken Curry"
+            />
+            <p id="item-name">Chicken Curry</p>
+            <p id="item-price">Price : Rp. 27.000</p>
+          </div>
+
+          <div id="item-card">
+            <div id="card-top">
+              <i class="fa fa-star" id="rating">$.3</i>
+              <i class="fa fa-heart-o add-to-cart"></i>
+            </div>
+            <img
+              src="assets/Chicken/Chicken-Curry.jpg"
+              alt="Chicken Curry"
+            />
+            <p id="item-name">Chicken Curry</p>
+            <p id="item-price">Price : Rp. 27.000</p>
+          </div>
+
+          <div id="item-card">
+            <div id="card-top">
+              <i class="fa fa-star" id="rating">$.3</i>
+              <i class="fa fa-heart-o add-to-cart"></i>
+            </div>
+            <img
+              src="assets/Chicken/Chicken-Curry.jpg"
+              alt="Chicken Curry"
+            />
+            <p id="item-name">Chicken Curry</p>
+            <p id="item-price">Price : Rp. 27.000</p>
+          </div>
+
+          <div id="item-card">
+            <div id="card-top">
+              <i class="fa fa-star" id="rating">$.3</i>
+              <i class="fa fa-heart-o add-to-cart"></i>
+            </div>
+            <img
+              src="assets/Chicken/Chicken-Curry.jpg"
+              alt="Chicken Curry"
+            />
+            <p id="item-name">Chicken Curry</p>
+            <p id="item-price">Price : Rp. 27.000</p>
+          </div>
+
+
 
           <div id="ChinaFood">
             <p id="category-name">China Food</p>
-            <div id="item-card">
-              <div id="card-top">
-                <i class="fa fa-star" id="rating">$.3</i>
-                <i class="fa fa-heart-o add-to-cart"></i>
-              </div>
-              <img
-                src="assets/ChinaFood/chowmin.jpg"
-                alt="Chowmin"
-              />
-              <p id="item-name">Chowmin</p>
-              <p id="item-price">Price : Rp. 27.000</p>
-            </div>
           </div>
 
+          <div id="item-card">
+            <div id="card-top">
+              <i class="fa fa-star" id="rating">$.3</i>
+              <i class="fa fa-heart-o add-to-cart"></i>
+            </div>
+            <img
+              src="assets/ChinaFood/chowmin.jpg"
+              alt="Chowmin"
+            />
+            <p id="item-name">Chowmin</p>
+            <p id="item-price">Price : Rp. 27.000</p>
+          </div>
+
+          <div id="item-card">
+            <div id="card-top">
+              <i class="fa fa-star" id="rating">$.3</i>
+              <i class="fa fa-heart-o add-to-cart"></i>
+            </div>
+            <img
+              src="assets/ChinaFood/chowmin.jpg"
+              alt="Chowmin"
+            />
+            <p id="item-name">Chowmin</p>
+            <p id="item-price">Price : Rp. 27.000</p>
+          </div>
+
+          <div id="item-card">
+            <div id="card-top">
+              <i class="fa fa-star" id="rating">$.3</i>
+              <i class="fa fa-heart-o add-to-cart"></i>
+            </div>
+            <img
+              src="assets/ChinaFood/chowmin.jpg"
+              alt="Chowmin"
+            />
+            <p id="item-name">Chowmin</p>
+            <p id="item-price">Price : Rp. 27.000</p>
+          </div>
+
+          <div id="item-card">
+            <div id="card-top">
+              <i class="fa fa-star" id="rating">$.3</i>
+              <i class="fa fa-heart-o add-to-cart"></i>
+            </div>
+            <img
+              src="assets/ChinaFood/chowmin.jpg"
+              alt="Chowmin"
+            />
+            <p id="item-name">Chowmin</p>
+            <p id="item-price">Price : Rp. 27.000</p>
+          </div>
+
+          <div id="item-card">
+            <div id="card-top">
+              <i class="fa fa-star" id="rating">$.3</i>
+              <i class="fa fa-heart-o add-to-cart"></i>
+            </div>
+            <img
+              src="assets/ChinaFood/chowmin.jpg"
+              alt="Chowmin"
+            />
+            <p id="item-name">Chowmin</p>
+            <p id="item-price">Price : Rp. 27.000</p>
+          </div>
+
+          <div id="item-card">
+            <div id="card-top">
+              <i class="fa fa-star" id="rating">$.3</i>
+              <i class="fa fa-heart-o add-to-cart"></i>
+            </div>
+            <img
+              src="assets/ChinaFood/chowmin.jpg"
+              alt="Chowmin"
+            />
+            <p id="item-name">Chowmin</p>
+            <p id="item-price">Price : Rp. 27.000</p>
+          </div>
+
+          <div id="item-card">
+            <div id="card-top">
+              <i class="fa fa-star" id="rating">$.3</i>
+              <i class="fa fa-heart-o add-to-cart"></i>
+            </div>
+            <img
+              src="assets/ChinaFood/chowmin.jpg"
+              alt="Chowmin"
+            />
+            <p id="item-name">Chowmin</p>
+            <p id="item-price">Price : Rp. 27.000</p>
+          </div>
+
+          <div id="item-card">
+            <div id="card-top">
+              <i class="fa fa-star" id="rating">$.3</i>
+              <i class="fa fa-heart-o add-to-cart"></i>
+            </div>
+            <img
+              src="assets/ChinaFood/chowmin.jpg"
+              alt="Chowmin"
+            />
+            <p id="item-name">Chowmin</p>
+            <p id="item-price">Price : Rp. 27.000</p>
+          </div>
+
+
+
+
           <div id="vegetable">
-            <p id="category-name">Pure Veg Dishes</p>
+            <p id="category-name">Vegetable</p>
             <div id="item-card">
               <div id="card-top">
                 <i class="fa fa-star" id="rating">$.3</i>
@@ -170,6 +414,10 @@
         <div id="category-list">
           <p class="item-menu">Go For Hunt</p>
           <div class="border"></div>
+          <div class="list-card">
+            <img src="assets/ChinaFood/chowmin.jpg" alt="list">
+            <a href="" class="list-name"> Chinese Food</a>
+          </div>
         </div>
         <div id="checkout" class="cart-toggle">
           <p id="total-item">Total Item : 5</p>
