--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
             <i class="fa fa-cart-plus" id="cart-plus"> 0 Items</i>
           </div>
         </div>
-        <div id="food-items">
+        <div id="food-items" class="food-items">
+
           <div id="biryani">
             <p id="category-name">Biryani</p>
           </div>
@@ -397,7 +398,20 @@
               <td>Quantity</td>
               <td>Price</td>
             </thead>
-            <tbody id="table-body"></tbody>
+            <tbody id="table-body">
+              <tr>
+                <td>
+                  <img src="assets/Chicken/Chicken-do-Pyaza.jpg" alt="img">
+                </td>
+                <td>Chicken Pyaza</td>
+                <td>
+                  <button class="decrease-item">-</button>
+                  <span>1</span>
+                  <button class="increase-item">+</button>
+                </td>
+                <td>10</td>
+              </tr>
+            </tbody>
           </table>
           <div class="btn-box">
             <button class="cart-btn">Checkout</button>
@@ -418,10 +432,46 @@
             <img src="assets/ChinaFood/chowmin.jpg" alt="list">
             <a href="" class="list-name"> Chinese Food</a>
           </div>
+          <div class="list-card">
+            <img src="assets/ChinaFood/chowmin.jpg" alt="list">
+            <a href="" class="list-name"> Chinese Food</a>
+          </div>
+          <div class="list-card">
+            <img src="assets/ChinaFood/chowmin.jpg" alt="list">
+            <a href="" class="list-name"> Chinese Food</a>
+          </div>
+          <div class="list-card">
+            <img src="assets/ChinaFood/chowmin.jpg" alt="list">
+            <a href="" class="list-name"> Chinese Food</a>
+          </div>
+          <div class="list-card">
+            <img src="assets/ChinaFood/chowmin.jpg" alt="list">
+            <a href="" class="list-name"> Chinese Food</a>
+          </div>
+          <div class="list-card">
+            <img src="assets/ChinaFood/chowmin.jpg" alt="list">
+            <a href="" class="list-name"> Chinese Food</a>
+          </div>
+          <div class="list-card">
+            <img src="assets/ChinaFood/chowmin.jpg" alt="list">
+            <a href="" class="list-name"> Chinese Food</a>
+          </div>
+          <div class="list-card">
+            <img src="assets/ChinaFood/chowmin.jpg" alt="list">
+            <a href="" class="list-name"> Chinese Food</a>
+          </div>
+          <div class="list-card">
+            <img src="assets/ChinaFood/chowmin.jpg" alt="list">
+            <a href="" class="list-name"> Chinese Food</a>
+          </div>
+          <div class="list-card">
+            <img src="assets/ChinaFood/chowmin.jpg" alt="list">
+            <a href="" class="list-name"> Chinese Food</a>
+          </div>
         </div>
         <div id="checkout" class="cart-toggle">
           <p id="total-item">Total Item : 5</p>
-          <p id="total-price"></p>
+          <p id="total-price">Total Price : 50</p>
           <p id="delievery">Free delievery on $ 40</p>
           <button class="cart-btn">Checkout</button>
         </div>
