--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
               <i class="fa fa-heart-o add-to-cart"></i>
             </div>
             <img
-              src="assets/Briyani/AmburChickenBiryani.jpg"
-              alt="Ambur Chicken"
+              src="assets/Briyani/ChickenBriyani.jpg"
+              alt="Chicken Briyani"
             />
-            <p id="item-name">Ambur Chicken</p>
-            <p id="item-price">Price : Rp. 27.000</p>
+            <p id="item-name">Chicken Briyani</p>
+            <p id="item-price">Price : Rp. 30.000</p>
           </div>
           
           <div id="item-card">
@@ -83,11 +83,11 @@
               <i class="fa fa-heart-o add-to-cart"></i>
             </div>
             <img
-              src="assets/Briyani/AmburChickenBiryani.jpg"
-              alt="Ambur Chicken"
+              src="assets/Briyani/FishBriyani.jpg"
+              alt="Fish Briyani"
             />
-            <p id="item-name">Ambur Chicken</p>
-            <p id="item-price">Price : Rp. 27.000</p>
+            <p id="item-name">Fish Briyani</p>
+            <p id="item-price">Price : Rp. 26.560</p>
           </div>
 
           <div id="item-card">
@@ -96,11 +96,11 @@
               <i class="fa fa-heart-o add-to-cart"></i>
             </div>
             <img
-              src="assets/Briyani/AmburChickenBiryani.jpg"
-              alt="Ambur Chicken"
+              src="assets/Briyani/KamprupiBriyani.jpg"
+              alt="Kamprupi Briyani"
             />
-            <p id="item-name">Ambur Chicken</p>
-            <p id="item-price">Price : Rp. 27.000</p>
+            <p id="item-name">Kamprupi Briyani</p>
+            <p id="item-price">Price : Rp. 29.870</p>
           </div>
 
           <div id="item-card">
@@ -109,11 +109,11 @@
               <i class="fa fa-heart-o add-to-cart"></i>
             </div>
             <img
-              src="assets/Briyani/AmburChickenBiryani.jpg"
-              alt="Ambur Chicken"
+              src="assets/Briyani/KashmiriBriyani.jpg"
+              alt="Kashmiri Briyani"
             />
-            <p id="item-name">Ambur Chicken</p>
-            <p id="item-price">Price : Rp. 27.000</p>
+            <p id="item-name">Kashmiri Briyani</p>
+            <p id="item-price">Price : Rp. 27.500</p>
           </div>
 
           <div id="item-card">
@@ -122,11 +122,11 @@
               <i class="fa fa-heart-o add-to-cart"></i>
             </div>
             <img
-              src="assets/Briyani/AmburChickenBiryani.jpg"
-              alt="Ambur Chicken"
+              src="assets/Briyani/MemoniBryani.png"
+              alt="Memoni Briyani"
             />
-            <p id="item-name">Ambur Chicken</p>
-            <p id="item-price">Price : Rp. 27.000</p>
+            <p id="item-name">Memoni  Briyani</p>
+            <p id="item-price">Price : Rp. 31.000</p>
           </div>
 
 
