--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
               alt="Chicken Curry"
             />
             <p id="item-name">Chicken Curry</p>
-            <p id="item-price">Price : Rp. 27.000</p>
+            <p id="item-price">Price : Rp. 32.000</p>
           </div>
 
 
@@ -154,10 +154,23 @@
               <i class="fa fa-heart-o add-to-cart"></i>
             </div>
             <img
-              src="assets/Chicken/Chicken-Curry.jpg"
-              alt="Chicken Curry"
+              src="assets/Chicken/Chicken-Masala.jpg"
+              alt="Chicken Masala"
             />
-            <p id="item-name">Chicken Curry</p>
+            <p id="item-name">Chicken Masala</p>
+            <p id="item-price">Price : Rp. 30.000</p>
+          </div>
+
+          <div id="item-card">
+            <div id="card-top">
+              <i class="fa fa-star" id="rating">$.3</i>
+              <i class="fa fa-heart-o add-to-cart"></i>
+            </div>
+            <img
+              src="assets/Chicken/Chicken-do-Pyaza.jpg"
+              alt="Chicken do Pyaza"
+            />
+            <p id="item-name">Chicken do Pyaza</p>
             <p id="item-price">Price : Rp. 27.000</p>
           </div>
 
@@ -167,11 +180,11 @@
               <i class="fa fa-heart-o add-to-cart"></i>
             </div>
             <img
-              src="assets/Chicken/Chicken-Curry.jpg"
-              alt="Chicken Curry"
+              src="assets/Chicken/Chicken_roast.jpg"
+              alt="Chicken roast"
             />
-            <p id="item-name">Chicken Curry</p>
-            <p id="item-price">Price : Rp. 27.000</p>
+            <p id="item-name">Chicken Roast</p>
+            <p id="item-price">Price : Rp. 25.000</p>
           </div>
 
           <div id="item-card">
@@ -180,11 +193,11 @@
               <i class="fa fa-heart-o add-to-cart"></i>
             </div>
             <img
-              src="assets/Chicken/Chicken-Curry.jpg"
-              alt="Chicken Curry"
+              src="assets/Chicken/Handi-chicken.jpg"
+              alt="Handi chicken"
             />
-            <p id="item-name">Chicken Curry</p>
-            <p id="item-price">Price : Rp. 27.000</p>
+            <p id="item-name">Handi Chicken</p>
+            <p id="item-price">Price : Rp. 27.800</p>
           </div>
 
           <div id="item-card">
@@ -193,11 +206,11 @@
               <i class="fa fa-heart-o add-to-cart"></i>
             </div>
             <img
-              src="assets/Chicken/Chicken-Curry.jpg"
-              alt="Chicken Curry"
+              src="assets/Chicken/Murgh-Musallam.jpg"
+              alt="Murgh Musallam"
             />
-            <p id="item-name">Chicken Curry</p>
-            <p id="item-price">Price : Rp. 27.000</p>
+            <p id="item-name">Murgh Musallam</p>
+            <p id="item-price">Price : Rp. 37.450</p>
           </div>
 
           <div id="item-card">
@@ -206,24 +219,11 @@
               <i class="fa fa-heart-o add-to-cart"></i>
             </div>
             <img
-              src="assets/Chicken/Chicken-Curry.jpg"
-              alt="Chicken Curry"
+              src="assets/Chicken/Paneer-Butter-Masala.jpg"
+              alt="Paneer Butter Masala"
             />
-            <p id="item-name">Chicken Curry</p>
-            <p id="item-price">Price : Rp. 27.000</p>
-          </div>
-
-          <div id="item-card">
-            <div id="card-top">
-              <i class="fa fa-star" id="rating">$.3</i>
-              <i class="fa fa-heart-o add-to-cart"></i>
-            </div>
-            <img
-              src="assets/Chicken/Chicken-Curry.jpg"
-              alt="Chicken Curry"
-            />
-            <p id="item-name">Chicken Curry</p>
-            <p id="item-price">Price : Rp. 27.000</p>
+            <p id="item-name">Panner Butter Masala</p>
+            <p id="item-price">Price : Rp. 32.000</p>
           </div>
 
 
@@ -251,11 +251,11 @@
               <i class="fa fa-heart-o add-to-cart"></i>
             </div>
             <img
-              src="assets/ChinaFood/chowmin.jpg"
-              alt="Chowmin"
+              src="assets/ChinaFood/cabbage-momos-.jpg"
+              alt="cabbage momos"
             />
-            <p id="item-name">Chowmin</p>
-            <p id="item-price">Price : Rp. 27.000</p>
+            <p id="item-name">Cabbage Momos</p>
+            <p id="item-price">Price : Rp. 21.000</p>
           </div>
 
           <div id="item-card">
@@ -264,11 +264,11 @@
               <i class="fa fa-heart-o add-to-cart"></i>
             </div>
             <img
-              src="assets/ChinaFood/chowmin.jpg"
-              alt="Chowmin"
+              src="assets/ChinaFood/mmos.jpg"
+              alt="mmos"
             />
-            <p id="item-name">Chowmin</p>
-            <p id="item-price">Price : Rp. 27.000</p>
+            <p id="item-name">Mmos</p>
+            <p id="item-price">Price : Rp. 20.000</p>
           </div>
 
           <div id="item-card">
@@ -277,11 +277,11 @@
               <i class="fa fa-heart-o add-to-cart"></i>
             </div>
             <img
-              src="assets/ChinaFood/chowmin.jpg"
-              alt="Chowmin"
+              src="assets/ChinaFood/spring-rolls.jpg"
+              alt="spring-rolls"
             />
-            <p id="item-name">Chowmin</p>
-            <p id="item-price">Price : Rp. 27.000</p>
+            <p id="item-name">Spring Rolls</p>
+            <p id="item-price">Price : Rp. 17.000</p>
           </div>
 
           <div id="item-card">
@@ -290,11 +290,11 @@
               <i class="fa fa-heart-o add-to-cart"></i>
             </div>
             <img
-              src="assets/ChinaFood/chowmin.jpg"
-              alt="Chowmin"
+              src="assets/ChinaFood/szechuan-chicken.jpg"
+              alt="szechuan-chicken"
             />
-            <p id="item-name">Chowmin</p>
-            <p id="item-price">Price : Rp. 27.000</p>
+            <p id="item-name">Szechuan Chicken</p>
+            <p id="item-price">Price : Rp. 27.700</p>
           </div>
 
           <div id="item-card">
@@ -303,11 +303,11 @@
               <i class="fa fa-heart-o add-to-cart"></i>
             </div>
             <img
-              src="assets/ChinaFood/chowmin.jpg"
-              alt="Chowmin"
+              src="assets/ChinaFood/veg-fried-rice.jpg"
+              alt="veg-fried-rice"
             />
-            <p id="item-name">Chowmin</p>
-            <p id="item-price">Price : Rp. 27.000</p>
+            <p id="item-name">Vegetable Fried Rice</p>
+            <p id="item-price">Price : Rp. 23.000</p>
           </div>
 
           <div id="item-card">
@@ -341,6 +341,54 @@
 
           <div id="vegetable">
             <p id="category-name">Vegetable</p>
+            <div id="item-card">
+              <div id="card-top">
+                <i class="fa fa-star" id="rating">$.3</i>
+                <i class="fa fa-heart-o add-to-cart"></i>
+              </div>
+              <img
+                src="assets/Vegetable/vegetable-pakora.jpg"
+                alt="VegetablePakora"
+              />
+              <p id="item-name">Vegetable Pakora</p>
+              <p id="item-price">Price : Rp. 27.000</p>
+            </div>
+            <div id="item-card">
+              <div id="card-top">
+                <i class="fa fa-star" id="rating">$.3</i>
+                <i class="fa fa-heart-o add-to-cart"></i>
+              </div>
+              <img
+                src="assets/Vegetable/vegetable-pakora.jpg"
+                alt="VegetablePakora"
+              />
+              <p id="item-name">Vegetable Pakora</p>
+              <p id="item-price">Price : Rp. 27.000</p>
+            </div>
+            <div id="item-card">
+              <div id="card-top">
+                <i class="fa fa-star" id="rating">$.3</i>
+                <i class="fa fa-heart-o add-to-cart"></i>
+              </div>
+              <img
+                src="assets/Vegetable/vegetable-pakora.jpg"
+                alt="VegetablePakora"
+              />
+              <p id="item-name">Vegetable Pakora</p>
+              <p id="item-price">Price : Rp. 27.000</p>
+            </div>
+            <div id="item-card">
+              <div id="card-top">
+                <i class="fa fa-star" id="rating">$.3</i>
+                <i class="fa fa-heart-o add-to-cart"></i>
+              </div>
+              <img
+                src="assets/Vegetable/vegetable-pakora.jpg"
+                alt="VegetablePakora"
+              />
+              <p id="item-name">Vegetable Pakora</p>
+              <p id="item-price">Price : Rp. 27.000</p>
+            </div>
             <div id="item-card">
               <div id="card-top">
                 <i class="fa fa-star" id="rating">$.3</i>
